cloudflared/setup-base.yaml
# 1. THE NAMESPACE
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare-tunnel
