cloudflared/forgejo-site.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: rajvijeyaram
  labels:
    app: forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:7
          ports:
            - containerPort: 3000
              name: http-gui
            - containerPort: 2222
              name: ssh
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-data
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-service
  namespace: rajvijeyaram
spec:
  selector:
    app: forgejo
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: ssh
      protocol: TCP
      port: 2222
      targetPort: 2222
