cloudflared/portfolio-site.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rajvijeyaram
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-site
  namespace: rajvijeyaram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-site
  template:
    metadata:
      labels:
        app: portfolio-site
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: portfolio-html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio2-site
  namespace: rajvijeyaram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio2-site
  template:
    metadata:
      labels:
        app: portfolio2-site
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: portfolio2-html
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: rajvijeyaram
spec:
  selector:
    app: portfolio-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio2-service
  namespace: rajvijeyaram
spec:
  selector:
    app: portfolio2-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
