cloudflared/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: test-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: test.rajvijeyaram.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: podinfo-service
            port:
              number: 80
